# automcp-ts

./: .gitignore  CONVERSION_SUMMARY.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.cursor/: mcp.example.json
.github/workflows/: python-publish.yml
agentic-scripts/: README.md  config.json
auto_mcp/: cli.py
auto_mcp/adapters/: crewai_adapter.py  crewai_agent_adapter.py  crewai_tool_adapter.py  function_adapter.py  langchain_tool_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  openai_adapter.py  pydantic_adapter.py
auto_mcp/cli_templates/: crewai_mcp_server.py.template  crewai_orchestrator_automcp.py.template  crewai_tool_automcp.py.template  crewai_tool_mcp_server.py.template  function_mcp_server.py.template  langchain_tool_automcp.py.template  langchain_tool_mcp_server.py.template  langgraph_automcp.py.template  langgraph_mcp_server.py.template  llamaindex_mcp_server.py.template  mcp_agent_automcp.py.template  openai_mcp_server.py.template  pydantic_automcp.py.template
auto_mcp/core/: adapter_base.py
automcp/: cli.py
automcp/adapters/: crewai.py  crewai_tool_adapter.py  langchain.py  langchain_tool_adapter.py  langgraph.py  langgraph_adapter.py  llamaindex.py  llamaindex_adapter.py  mcp_agent.py  mcp_agent_adapter.py  openai.py  pydantic.py  utils.py
automcp/cli_templates/: automcp.py.template  crewai_agent_automcp.py.template  crewai_tool_automcp.py.template  framework_config.yaml  langgraph_automcp.py.template  llamaindex_automcp.py.template  openai_automcp.py.template  run_mcp.py.template
examples/: example-ideas.md
examples/crewai/job_posting/: automcp.py  main.py  pyproject.toml  run_automcp.py
examples/crewai/job_posting/config/: agents.yaml  tasks.yaml
examples/crewai/marketing_posts/: README.md  automcp.py  crew.py  main.py  package.json  pyproject.toml  run_automcp.py  run_mcp.py  tsconfig.json
examples/crewai/marketing_posts/config/: tasks.yml
examples/crewai/marketing_posts/src/: agent.ts  config-loader.ts  crew.ts  index.ts  marketing-posts-crew.ts  server.ts  task.ts  types.ts
examples/crewai/simple_researcher/: automcp.py  crew.py  main.py  pyproject.toml  run_automcp.py
examples/crewai/simple_researcher/config/: tasks.yml
examples/crewai/single-agent/: automcp.py  main.py  pyproject.toml
examples/crewai/tools/: .env.example  automcp.py  main.py  mcp_server.py  pyproject.toml  run_automcp.py
examples/express-example/: agent.ts  run_mcp.ts
examples/langchain/tools/: .env.example  automcp.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  run_automcp.py
examples/langgraph/reflection_agent/: automcp.py  main.py  package.json  pyproject.toml  run_automcp.py  run_mcp.py
examples/langgraph/reflection_agent/src/: index.ts
examples/langgraph/reflection_agent2/: main.py
examples/langgraph/self_discover_agent/: main.py  mcp_server.py  package.json  pyproject.toml  run_automcp.py  run_mcp.py  tsconfig.json
examples/langgraph/self_discover_agent/src/: index.ts
examples/llamaindex/openai_query_agent/: README.md  automcp.py  main.py  mcp_server.py  package.json  pyproject.toml  run_mcp.py
examples/llamaindex/openai_query_agent/src/: index.ts  run-mcp.ts
examples/llamaindex/tools/: .env.example  main.py  pyproject.toml  run_mcp.py
examples/mcp-agent/basic-agent/: README.md  automcp.py  main.py  mcp_server.py  package.json  pyproject.toml  run_automcp.py  run_mcp.py  tsconfig.json
examples/mcp-agent/basic-agent/src/: index.ts  run-mcp.ts
examples/openai/multi-agent/: main.py  main.ts  package.json  pyproject.toml  run_mcp.py  run_mcp.ts
examples/openai/single-agent/: pyproject.toml  run_automcp.py
examples/openai/spanish_agent/: automcp.py  main.py  pyproject.toml
examples/openai/translator_agent/: automcp.py  main.py  mcp_server.py  pyproject.toml
examples/pydantic/weather-app/: .env.example  automcp.py  main.py  main.ts  package.json  pyproject.toml  run_automcp.py  run_mcp.py  run_mcp.ts
src/: cli.ts  index.ts
src/adapters/: base.ts  crewai.ts  errors.ts  express.ts  index.ts  langgraph.ts  llamaindex.ts  mcpAgent.ts  openai.ts  pydantic.ts  utils.ts
src/cli_templates/: framework_config.yaml  run_mcp.ts.template
templates/: framework_config.yaml  run_mcp.ts.template
