[project]
name = "auto_mcp"
version = "0.1.0"
description = "Converts any agent/LLM framework to MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.0.0",
    "toml>=0.10.0"
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
]

langgraph = [
    "langgraph==0.3.25",
    "langchain==0.3.20",
    "langchain-openai==0.2.14"
]

llamaindex = [
    "llama-index>=0.12.28"
]

openai = [
    "openai-agents>=0.0.9"
]

all = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
    "langgraph==0.3.25",
    "langchain==0.3.20",
    "langchain-openai==0.2.14",
    "llama-index>=0.12.28",
    "openai-agents>=0.0.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_mcp"]

[project.scripts]
automcp = "auto_mcp.cli:main"