[project]
name = "automcp"
version = "0.1.0"
description = "Converts any agent/LLM framework to MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.0.0",
    "toml>=0.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automcp"]

[project.scripts]
automcp = "automcp.cli:main"