[project]
name = "naptha-automcp"
version = "0.1.1"
description = "Convert tool, agents and orchestrators from existing agent frameworks to MCP servers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Richard Blythman", email = "richard@naptha.ai" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.0.0",
    "toml>=0.10.0"
]

[project.urls]
"Homepage" = "https://github.com/NapthaAI/automcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automcp"]

[project.scripts]
automcp = "automcp.cli:main"