[project]
name = "mcp-project"
version = "0.1.0"
description = "A project with MCP server integration"
requires-python = ">=3.10"
dependencies = [
 "naptha-automcp",
 "llama-index>=0.12.28",
 "llama-index-core>=0.12.28",
 "llama-index-llms-openai",
 "llama-index-readers-wikipedia>=0.3.0",
 "llama-index-vector-stores-pinecone",
 "mcp>=1.6.0",
 "pydantic>=2.11.1",
 "wikipedia>=1.4.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
serve_stdio = "run_mcp:serve_stdio"
serve_sse = "run_mcp:serve_sse"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [ "/run_mcp.py",]
packages = [ ".",]
exclude = [ "__pycache__", "*.pyc", ".pytest_cache", ".ruff_cache",]

[tool.uv.sources]
automcp = { path = "../../../" }