[project]
name = "openai-spanish-agent-mcp-project"
version = "0.1.0"
description = "An openai agent project with MCP server integration"
requires-python = ">=3.10"
dependencies = [
    "auto-mcp",
    "openai-agents>=0.0.9",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [ "/automcp.py",]
packages = [ ".",]
exclude = [ "__pycache__", "*.pyc", ".pytest_cache", ".ruff_cache",]

[project.scripts]
serve_stdio = "automcp:serve_stdio"
serve_sse = "automcp:serve_sse"

[tool.uv.sources]
auto-mcp = { path = "../../../" }
